--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,6 @@
-MONGODB_URI=mongodb+srv://saiken1:Welcome100@cluster0.5ufzjqa.mongodb.net/mern_food_ordering_app?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://saiken1:Welcome100@cluster0.5ufzjqa.mongodb.net/mern_food_ordering_app?retryWrites=true&w=majority 
+#  Auth0 
+
+AUTH0_AUDIENCE= mern-food-ordering-app 
+AUTH0_ISSUER_BASE_URL=https://dev-fzv2tl3ebemw872g.us.auth0.com/ 
+
