--- a/Frontend/vite-project/package.json
+++ b/Frontend/vite-project/package.json
@@ -22,11 +22,13 @@
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.352.0",
+    "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.2",
+    "sonner": "^1.4.32",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
