--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -1,5 +1,6 @@
 {
-  "compilerOptions": {
+  "compilerOptions": { 
+    "outDir": "./dist",  // holds all the code for all the distribution 
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
