--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
-    "dev": " nodemon"
+    "dev": " nodemon",
+    "build": "npm install && npx tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/multer": "^1.4.11",
+    "cloudinary": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
@@ -17,7 +20,8 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.4.0",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
