--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,17 +6,18 @@
   "scripts": {
     "dev": " nodemon",
     "build": "npm install && npx tsc",
-    "start":"node dist/index.js"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/multer": "^1.4.11",
+    "body-parser": "^1.20.2",
     "cloudinary": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3",
+    "express": "^4.19.2",
     "express-oauth2-jwt-bearer": "^1.6.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
