--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@types/multer": "^1.4.11",
     "cloudinary": "^2.1.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "react-hook-form": "^7.51.3"
   }
 }
