--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,7 +24,8 @@
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
-    "node": "^20.13.0"
+    "node": "^20.13.0",
+    "stripe": "^15.8.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
