--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
-    "dev": " nodemon",
+    "dev": " concurrently \"nodemon\" \"npm run stripe\"",
+    "stripe":" stripe listen --forward-to localhost:8000/api/order/checkout/webhook",
     "build": "npm install && npx tsc",
     "start": "node dist/index.js"
   },
@@ -15,6 +16,7 @@
     "@types/multer": "^1.4.11",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.1.0",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
